--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
-theme: cayman
-remote_theme: cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
+title: Open Science in Global South: A collection of practical guides
+description: This website is for updates of the project
